--- a/autodiff_ot_gan.ipynb
+++ b/autodiff_ot_gan.ipynb
@@ -1016,15 +1016,25 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-g1tFhy7vqsw",
+        "colab_type": "text"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gabrielkasmi/ot_gan_ensae/blob/master/autodiff_ot_gan.ipynb)\n"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "JNJY0EOs5J6Q",
         "colab_type": "code",
+        "outputId": "1b4a0481-efe9-4b80-bf65-d5237c4e5a5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 255
-        },
-        "outputId": "1b4a0481-efe9-4b80-bf65-d5237c4e5a5b"
+        }
       },
       "source": [
         "import torch\n",
@@ -1041,7 +1051,7 @@
         "!pip install torchviz #git+https://github.com/szagoruyko/pytorchviz\n",
         "from torchviz import make_dot"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1138,17 +1148,17 @@
         "scrolled": false,
         "id": "Pd7QBMBp5J6Y",
         "colab_type": "code",
+        "outputId": "8615e737-823f-4abb-b3af-dd7ce4b91cc1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 119
-        },
-        "outputId": "8615e737-823f-4abb-b3af-dd7ce4b91cc1"
+        }
       },
       "source": [
         "test = MultilayerPerceptron(2, 500, 784)\n",
         "print(test)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,16 +1179,16 @@
       "metadata": {
         "id": "tUfDIChh5J6b",
         "colab_type": "code",
+        "outputId": "14a271e4-444c-4bce-d248-38c8bdf542c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "14a271e4-444c-4bce-d248-38c8bdf542c1"
+        }
       },
       "source": [
         "make_dot(test.forward(x)).render('img/mlp_architecture')"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1236,18 +1246,18 @@
         "scrolled": false,
         "id": "tPwcql125J6l",
         "colab_type": "code",
+        "outputId": "c4453d96-95dd-42c9-dd52-e404a3e15532",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "c4453d96-95dd-42c9-dd52-e404a3e15532"
+        }
       },
       "source": [
         "# for i in range(10):\n",
         "#     imshow(test.forward(x[i,:]))\n",
         "imshow(test.forward(x))"
       ],
-      "execution_count": 16,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1269,6 +1279,7 @@
       "metadata": {
         "id": "XRHSk9ZO5J6o",
         "colab_type": "code",
+        "outputId": "67323335-c1fd-4ba5-9653-fca55d7574b8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 615,
@@ -1306,8 +1317,7 @@
             "07ff84113acc4d5f867e0f355d6e1e24",
             "2f873484ad914cafb54004b71c117f99"
           ]
-        },
-        "outputId": "67323335-c1fd-4ba5-9653-fca55d7574b8"
+        }
       },
       "source": [
         "transform = transforms.ToTensor()\n",
@@ -1341,7 +1351,7 @@
         "ax.imshow(img, cmap='gray_r')\n",
         "plt.show()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1517,11 +1527,11 @@
         "scrolled": false,
         "id": "cg2aEiAA5J63",
         "colab_type": "code",
+        "outputId": "e4bdb564-e145-4eaa-e819-1d56983fc407",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "e4bdb564-e145-4eaa-e819-1d56983fc407"
+        }
       },
       "source": [
         "# test if the network is training as expected on a dummy example\n",
@@ -1560,7 +1570,7 @@
         "        x = torch.rand(2, requires_grad=True).cuda()\n",
         "        samples_evolution.append(test(x))"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1587,17 +1597,17 @@
         "scrolled": false,
         "id": "0l0lPqfm5J66",
         "colab_type": "code",
+        "outputId": "9131c984-735a-4959-86f8-b16ca371b4b4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "9131c984-735a-4959-86f8-b16ca371b4b4"
+        }
       },
       "source": [
         "for img in samples_evolution:\n",
         "    imshow(img)"
       ],
-      "execution_count": 21,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1619,17 +1629,17 @@
       "metadata": {
         "id": "X8nWAPMt5J69",
         "colab_type": "code",
+        "outputId": "6cbdeef3-836e-4019-8a04-b18481a18db3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "6cbdeef3-836e-4019-8a04-b18481a18db3"
+        }
       },
       "source": [
         "imshow(samples_evolution[-1])\n",
         "# plt.savefig(\"img/training_L2_loss.png\")"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1652,18 +1662,18 @@
         "scrolled": false,
         "id": "6lXchSM45J6_",
         "colab_type": "code",
+        "outputId": "03abb87c-8bc7-4c92-ba20-7520a6811fb3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "03abb87c-8bc7-4c92-ba20-7520a6811fb3"
+        }
       },
       "source": [
         "# for i in range(10):\n",
         "#     imshow(img_test[i])\n",
         "imshow(img_test)"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1803,11 +1813,11 @@
       "metadata": {
         "id": "HeFP5rUU91Rx",
         "colab_type": "code",
+        "outputId": "b26097ff-91b2-4a04-a977-6a2e4b6da15e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
-        },
-        "outputId": "b26097ff-91b2-4a04-a977-6a2e4b6da15e"
+        }
       },
       "source": [
         "C_11 = cost_matrix(y_pred, y_pred)\n",
@@ -1820,7 +1830,7 @@
         "#print(W_xy = sinkhorn_wasserstein(x,y, C_xy, epsilon = epsilon, max_iters = max_iters))\n",
         "#print(W_yy = sinkhorn_wasserstein(y,y, C_yy, epsilon = epsilon, max_iters = max_iters))"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -1837,11 +1847,11 @@
       "metadata": {
         "id": "1affYmad5J7F",
         "colab_type": "code",
+        "outputId": "87195f9a-8d4a-4c79-99cd-ceab314f4f06",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 409
-        },
-        "outputId": "87195f9a-8d4a-4c79-99cd-ceab314f4f06"
+        }
       },
       "source": [
         "# training with custom loss\n",
@@ -1884,7 +1894,7 @@
         "        x = torch.rand(2, requires_grad=True).cuda()\n",
         "        samples_evolution_sk.append(model(x))"
       ],
-      "execution_count": 28,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
