rework. sinkhorn_distance function to be integrated

--- a/autodiff_ot_gan.ipynb
+++ b/autodiff_ot_gan.ipynb
@@ -2151,7 +2151,7 @@
         "\n",
         "  returns the l2 pairwise distance\n",
         "\n",
-        "  version 09.12 checked: works properly.\n",
+        "  version 09.12 checked: works almost properly.\n",
         "  \"\"\"\n",
         "\n",
         "  # reshape the tensors from (bs, n) to (n, bs) \n",
@@ -2210,7 +2210,7 @@
         "  # Compute the kernel matrix\n",
         "  K = torch.exp(-C/epsilon).cuda()\n",
         "\n",
-        "  # sinkhorn iterates\n",
+        "  # sinkhorn iterates (as in the paper)\n",
         "  b = torch.ones(nu.size(0)).cuda()\n",
         "\n",
         "  for _ in range(max_iters):\n",
@@ -2234,7 +2234,7 @@
         "colab": {}
       },
       "source": [
-        "def sinkhorn_loss(mu, nu, epsilon = 0.01, max_iters = 100, normalize = True):\n",
+        "def sinkhorn_loss(mu, nu, epsilon = 0.01, max_iters = 50, normalize = True):\n",
         "  \"\"\"\n",
         "  updated wrapper, returns the sinkhorn loss between two measures\n",
         "  mu and nu\n",
@@ -2399,7 +2399,65 @@
         "colab": {}
       },
       "source": [
-        ""
+        "def sinkhorn_distance(C, epsilon=1, max_iters=100, a = \"default\", b = \"default\", detach = True, device = device):\n",
+        "    \"\"\"Sinkhorn's distance\n",
+        "    Inputs : \n",
+        "    C the cost matrix (a torch tensor) of size K x K between batch X (K images) and batch Y (K images)\n",
+        "    epsilon : the regularization parameter of the Entropy-regularized Optimal Transport problem\n",
+        "    default value = 500 as in the article\n",
+        "    max_iters : number of iterations for the Sinkhorn's algorithm\n",
+        "    a : either \"default\" (then a will be initialized to a vector full of 1s) or a torch tensor\n",
+        "    b : either \"default\" (then a will be initialized to a vector full of 1s) or a torch tensor\n",
+        "    \n",
+        "    Output : the Sinkhorn distance between minibatch vectors X and Y\n",
+        "    \"\"\"\n",
+        "\n",
+        "    # Note : in our case we should have m = n 😊 K in the article's notations) if minibatches are of identical size\n",
+        "    n = C.size()[0]\n",
+        "    m = C.size()[1]\n",
+        "    \n",
+        "    ## Initialize a and b if necessary\n",
+        "    if a == \"default\":\n",
+        "        a = torch.ones([n], dtype=torch.float64)/n\n",
+        "    if b == \"default\":\n",
+        "        b = torch.ones([m], dtype=torch.float64)/m\n",
+        "    \n",
+        "    a = a.to(device)\n",
+        "    b = b.to(device)\n",
+        "\n",
+        "    if detach == True : \n",
+        "        ## Stop gradient propagation during the computation of the distance\n",
+        "        with torch.no_grad():\n",
+        "\n",
+        "            ## Compute the kernel matrix K\n",
+        "            K = torch.exp(-C/epsilon)\n",
+        "\n",
+        "            ## Alternate projections\n",
+        "            v = torch.ones([b.size()[0]])\n",
+        "            v = v.to(device)\n",
+        "\n",
+        "            for _ in range(max_iters):\n",
+        "                u = a / torch.matmul(K.double(),v.double())\n",
+        "                v = b / torch.matmul(torch.transpose(K,0,1).double(),u.double())\n",
+        "\n",
+        "            ## Compute the matching matrix\n",
+        "            M = torch.matmul(torch.matmul(torch.diag(u),K.double()),torch.diag(v))\n",
+        "            return torch.sum(M*C)\n",
+        "    else :\n",
+        "    ## Compute the kernel matrix K\n",
+        "        K = torch.exp(-C/epsilon)\n",
+        "\n",
+        "        ## Alternate projections\n",
+        "        v = torch.ones([b.size()[0]])\n",
+        "        v = v.to(device)\n",
+        "\n",
+        "        for _ in range(max_iters):\n",
+        "            u = a / torch.matmul(K.double(),v.double())\n",
+        "            v = b / torch.matmul(torch.transpose(K,0,1).double(),u.double())\n",
+        "\n",
+        "        ## Compute the matching matrix\n",
+        "        M = torch.matmul(torch.matmul(torch.diag(u),K.double()),torch.diag(v))\n",
+        "        return torch.sum(M*C)"
       ],
       "execution_count": 0,
       "outputs": []
