updates : rework the cost matrix (cosine similarity instead of l2 to avoid nans) + recode

--- a/autodiff_ot_gan.ipynb
+++ b/autodiff_ot_gan.ipynb
@@ -2412,7 +2412,7 @@
         "    Output : the Sinkhorn distance between minibatch vectors X and Y\n",
         "    \"\"\"\n",
         "\n",
-        "    # Note : in our case we should have m = n 😊 K in the article's notations) if minibatches are of identical size\n",
+        "    # Note : in our case we should have m = n = K in the article's notations) if minibatches are of identical size\n",
         "    n = C.size()[0]\n",
         "    m = C.size()[1]\n",
         "    \n",
@@ -2458,6 +2458,90 @@
         "        ## Compute the matching matrix\n",
         "        M = torch.matmul(torch.matmul(torch.diag(u),K.double()),torch.diag(v))\n",
         "        return torch.sum(M*C)"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Hq1zLxqeMye-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def _cost_matrix(x, y, p=2):\n",
+        "  \"Returns the matrix of $|x_i-y_j|^p$.\"\n",
+        "  x_col = x.unsqueeze(-2)\n",
+        "  y_lin = y.unsqueeze(-3)\n",
+        "  C = torch.sum((torch.abs(x_col - y_lin)) ** p, -1)\n",
+        "  return C"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nPPUEAdcM7NZ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 187
+        },
+        "outputId": "a5d1ccdf-649c-4a4c-a1a5-79cb649c2ed6"
+      },
+      "source": [
+        "x = torch.ones(10,8)\n",
+        "_cost_matrix(x,x)\n"
+      ],
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "        [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 64
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "__7tzuXRM7TU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O-tSsEfuM7Q0",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
