added open in colab link

--- a/sinkhorn_gan.ipynb
+++ b/sinkhorn_gan.ipynb
@@ -18,6 +18,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "o_7hVFl23Ayn",
+        "colab_type": "text"
+      },
+      "source": [
+        "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/gabrielkasmi/ot_gan_ensae/blob/master/sinkhorn_gan.ipynb)\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Z_BJou01n9bR",
         "colab_type": "text"
       },
@@ -67,11 +77,11 @@
       "metadata": {
         "id": "jweaEelPql5y",
         "colab_type": "code",
+        "outputId": "e9e77ca5-6a9e-4bdf-a1e3-48edcca0146f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 411
-        },
-        "outputId": "e9e77ca5-6a9e-4bdf-a1e3-48edcca0146f"
+        }
       },
       "source": [
         "import torch\n",
@@ -90,7 +100,7 @@
         "!pip install POT\n",
         "import ot"
       ],
-      "execution_count": 1,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,11 +177,11 @@
       "metadata": {
         "id": "nLFHI67tq3FB",
         "colab_type": "code",
+        "outputId": "470ad69e-610c-41c8-d200-3ca71fc9f0ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 212
-        },
-        "outputId": "470ad69e-610c-41c8-d200-3ca71fc9f0ce"
+        }
       },
       "source": [
         "# import the dataset\n",
@@ -207,7 +217,7 @@
         "ax.imshow(img, cmap='gray_r')\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -283,11 +293,11 @@
       "metadata": {
         "id": "67WX-alrq6AY",
         "colab_type": "code",
+        "outputId": "f0f3600d-942e-405d-e85d-ab2ea0b43989",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "f0f3600d-942e-405d-e85d-ab2ea0b43989"
+        }
       },
       "source": [
         "# quick check that everything is working as expected\n",
@@ -296,7 +306,7 @@
         "z = torch.rand(2)\n",
         "imshow(null_model(z))"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -348,11 +358,11 @@
       "metadata": {
         "id": "5XTdLHJyrfRh",
         "colab_type": "code",
+        "outputId": "9cf53294-76d4-4541-cd18-2d4517dd3cd1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 442
-        },
-        "outputId": "9cf53294-76d4-4541-cd18-2d4517dd3cd1"
+        }
       },
       "source": [
         "# test if the network is training as expected on a dummy example\n",
@@ -398,7 +408,7 @@
         "#        x = torch.rand(2, requires_grad=True).cuda()\n",
         "#        samples_evolution.append(test.forward(x))"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,11 +448,11 @@
       "metadata": {
         "id": "eo6B_g-8rk0n",
         "colab_type": "code",
+        "outputId": "288216fd-6593-4a40-e564-82a666f84d79",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 761
-        },
-        "outputId": "288216fd-6593-4a40-e564-82a666f84d79"
+        }
       },
       "source": [
         "# plot the results\n",
@@ -451,7 +461,7 @@
         "for img in samples:\n",
         "  imshow(img)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -519,18 +529,18 @@
       "metadata": {
         "id": "yC3Oy_qbsJg_",
         "colab_type": "code",
+        "outputId": "a6b67bd2-8f24-4be2-9224-7dab76c9b4af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "a6b67bd2-8f24-4be2-9224-7dab76c9b4af"
+        }
       },
       "source": [
         "# Definition of the target image\n",
         "target = real_images[0]\n",
         "imshow(target)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -552,11 +562,11 @@
       "metadata": {
         "id": "6kzcyQUysJnj",
         "colab_type": "code",
+        "outputId": "d48da9a3-20be-4c5d-de9a-de8ebea2bafd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        },
-        "outputId": "d48da9a3-20be-4c5d-de9a-de8ebea2bafd"
+        }
       },
       "source": [
         "# test if the network is training as expected on a dummy example\n",
@@ -602,7 +612,7 @@
         "        #x = torch.rand(2, requires_grad=False).cuda()\n",
         "        #samples_evolution.append(test(x))"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -635,11 +645,11 @@
       "metadata": {
         "id": "gvJ8J8-ZsVtH",
         "colab_type": "code",
+        "outputId": "c556fca3-9c4e-4715-8c0e-1c0a717accee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 761
-        },
-        "outputId": "c556fca3-9c4e-4715-8c0e-1c0a717accee"
+        }
       },
       "source": [
         "# generate some random vectors and some images \n",
@@ -651,7 +661,7 @@
         "for img in target_copies:\n",
         "  imshow(img)\n"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,11 +825,11 @@
       "metadata": {
         "id": "btrXM9k7to8W",
         "colab_type": "code",
+        "outputId": "9795e2a8-f33a-4891-ec61-f7e7731e4690",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "9795e2a8-f33a-4891-ec61-f7e7731e4690"
+        }
       },
       "source": [
         "# We just run a quick sanity check to see if this is working as expected \n",
@@ -833,7 +843,7 @@
         "sk_loss = SinkhornLoss()\n",
         "print(sk_loss(y_rand1, y_rand2),sk_loss(y_rand1, y_rand1) )"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -859,11 +869,11 @@
       "metadata": {
         "id": "YU97-C1nn8Fu",
         "colab_type": "code",
+        "outputId": "966787bc-71ae-4a08-affb-1dc03779df94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 952
-        },
-        "outputId": "966787bc-71ae-4a08-affb-1dc03779df94"
+        }
       },
       "source": [
         "# train the model with the custom loss\n",
@@ -909,7 +919,7 @@
         "        x = torch.rand(2, requires_grad=False).cuda()\n",
         "        samples_evolution_sk.append(new_model.forward(x))"
       ],
-      "execution_count": 18,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -979,18 +989,18 @@
       "metadata": {
         "id": "GL1JZhnAunAh",
         "colab_type": "code",
+        "outputId": "a16e33af-26ff-4347-fd86-e0c71f43aa9e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        },
-        "outputId": "a16e33af-26ff-4347-fd86-e0c71f43aa9e"
+        }
       },
       "source": [
         "# Plot the loss over the epochs \n",
         "plt.plot(losses)\n",
         "plt.savefig('losses_summary_notebook.png')\n"
       ],
-      "execution_count": 22,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1012,11 +1022,11 @@
       "metadata": {
         "id": "S2P5MmluutPs",
         "colab_type": "code",
+        "outputId": "3cb63de6-f942-4fde-bf73-ea0f9ef608d2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3cb63de6-f942-4fde-bf73-ea0f9ef608d2"
+        }
       },
       "source": [
         "# Plot the evolution while training\n",
@@ -1024,7 +1034,7 @@
         "for img in samples_evolution_sk:\n",
         "  imshow(img)\n"
       ],
-      "execution_count": 20,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1098,11 +1108,11 @@
       "metadata": {
         "id": "ULn1ptwKu6Kj",
         "colab_type": "code",
+        "outputId": "b4916c79-8b1c-4edc-af81-7dc8997cbb3b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "b4916c79-8b1c-4edc-af81-7dc8997cbb3b"
+        }
       },
       "source": [
         "# Generate some samples with the trained model\n",
@@ -1114,7 +1124,7 @@
         "# not really a mnist digit, but not noise either\n",
         "# also seems to give different numbers"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
